fix codice inutile rindondante
